--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.6.28</version>
+<!--      <scope>test</scope>-->
+    </dependency>
   </dependencies>
 
 </project>
